deployments/argocd-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80

#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: argocd-server
#  namespace: argocd
#spec:
#  entryPoints:
#    - websecure
#  routes:
#    - kind: Rule
#      match: Host(`argocd.127-0-0-1.nip.io`)
#      priority: 10
#      services:
#        - name: argocd-server
#          port: 80
#    - kind: Rule
#      match: Host(`argocd.127-0-0-1.nip.io`) && Headers(`Content-Type`, `application/grpc`)
#      priority: 11
#      services:
#        - name: argocd-server
#          port: 80
#          scheme: h2c
#  tls:
#    certResolver: default
#    options: {}
